package backtranslationwithtemporaldictionary;

option java_package = "jp.go.nict.langrid.client.protobuf.proto";
option java_outer_classname = "BackTranslationWithTemporalDictionaryProtos";

import "common.proto";
import "BilingualDictionary.proto";

message BackTranslateRequest {
  repeated Header headers = 1;
  required string sourceLang = 2;
  required string intermediateLang = 3;
  required string source = 4;
  repeated bilingualdictionary.Translation temporalDictionary = 5;
  optional string dictionaryTargetLang = 6;
}

message BackTranslationResult{
  required string intermediate = 1;
  required string target = 2;
}

message BackTranslateResponse {
  repeated Header headers = 1;
  optional Fault fault = 2;
  optional BackTranslationResult result = 3;
}

service Service{
  rpc backTranslate(BackTranslateRequest) returns (BackTranslateResponse);
}
